<resources>
    <string name="app_name">Фильмотека Хаяроff</string>
    <string name="film_finder">Найти фильм</string>
    <string name="now_playing">Сейчас идут</string>
    <string name="upcoming">Предстоящие</string>
    <string name="ttile_movie">Название фильма</string>
    <string name="year_movie">Год: </string>
    <string name="summary_movie">Краткое содержание фильма: </string>
    <string name="menu_search">Поиск фильмов</string>
    <string name="menu_custom">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="rang_movie">Рейтинг фильма: </string>
    <string name="summary">Краткое содержание: </string>
    <string name="revenue">Кассовые сборы: </string>
    <string name="budget">Бюджет: </string>
    <string name="duration">Продолжительность: </string>
    <string name="ganre">Жанр: </string>
    <string name="search_words">название фильма или часть названия</string>
    <string name="search">Поиск</string>
    <string name="id_movie">id: </string>
    <string name="popularity">популярность: </string>
    <string name="ganre_movie">жанр: </string>
    <string name="popularity_movie">популярность: </string>
    <string name="custom">Настройки</string>
    <string name="adult">Взрослый контент</string>
    <string name="about_project">Фильмотека Хаярова Э.В., edurda77@gmail.com</string>
    <string name="add_nots">Добавить заметку</string>
    <string name="save_nots">Сохранить заметку о фильме</string>
    <string name="content_note">Содержимое заметки</string>
    <string name="nots_movie">Заметки о фильмах</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="delete_all_nots">Удалить все заметки</string>
    <string name="base_activity">Главная страница</string>
    <string name="search_people">Введите фамилию или имя актера</string>
    <string name="search_peoples">Поиск актеров</string>
    <string name="name_people">Имя актера</string>
    <string name="birthday_people">Дата рождения:</string>
    <string name="biography_people">Биография:</string>
    <string name="place_birth_people">Место рождения (для просмотра, нажать) :</string>
    <string name="geolocation">Запросить геолокацию места рождения</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>