<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_half"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".ui.CustomActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:title="@string/film_finder"
            app:titleTextColor="@color/green" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        style="@style/title_movie_view"
        android:text="@string/custom" />

    <TextView
        style="@style/content_movie_view"
        android:text="@string/adult" />

    <Switch
        android:id="@+id/check_adult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_half"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:id="@+id/clear_nots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_all_nots">

    </Button>

</LinearLayout>