<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_half">

    <TextView
        style="@style/title_movie_view"
        android:id="@+id/search_title_movie"
        android:text="@string/ttile_movie"
        />
    <ImageView
        android:id="@+id/search_picture_movie_view"
        android:layout_width="@dimen/picture_size"
        android:layout_height="@dimen/picture_size"
        android:layout_gravity="center"/>
    <TextView
        style="@style/content_movie_view"
        android:id="@+id/search_id_movie"
        android:text="@string/id_movie"
        />
    <TextView
        style="@style/content_movie_view"
        android:id="@+id/search_genre_movie"
        android:text="@string/ganre_movie"
        />

</LinearLayout>