<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".ui.NoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_movie_note"
                style="@style/title_movie_view"
                android:text="@string/ttile_movie" />


            <EditText
                android:id="@+id/note_change_movie"
                style="@style/content_movie_view"
                android:text="@string/add_nots" />

            <Button
                android:id="@+id/save_change_nots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save_nots">

            </Button>
            <Button
                android:id="@+id/delete_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete_note">

            </Button>
        </LinearLayout>


    </ScrollView>

</LinearLayout>