<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_half"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".ui.SearchPeopleActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:title="@string/film_finder"
            app:titleTextColor="@color/green" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/search_people"
        style="@style/content_movie_view"
        android:hint="@string/search_people"
        android:textSize="@dimen/margin_twin" />

    <Button
        android:id="@+id/go_search_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_search_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_half"
        />






</LinearLayout>