<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.AboutActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_half">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:title="@string/film_finder"
            app:titleTextColor="@color/green"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        style="@style/text_view"
        android:text="@string/now_playing"


        >

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/now_playng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_margin="@dimen/margin_half"
        />
    <TextView
        android:text="@string/upcoming"
        style="@style/text_view"
        >

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_margin="@dimen/margin_half"
        />

</LinearLayout>